--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css"
-      crossorigin=""
+    />
+
+    <!--=============== ICONSCOUT ===============-->
+    <link
+      rel="stylesheet"
+      href="https://unicons.iconscout.com/release/v4.0.8/css/line.css"
     />
 
     <!--=============== CSS ===============-->
@@ -19,6 +24,14 @@
   <body>
     <div class="login">
       <img src="assets/img/login-bg.jpg" alt="sunset" class="login__bg" />
+      <div class="tags" style="position: sticky">
+        <div class="tags__item">
+          <i class="uil uil-tag-alt"></i><span>HTML</span>
+        </div>
+        <div class="tags__item">
+          <i class="uil uil-tag-alt"></i><span>CSS</span>
+        </div>
+      </div>
 
       <form action="" class="login__form">
         <h1 class="login__title">Login</h1>
@@ -60,6 +73,11 @@
           Don't have an account? <a href="#">Register</a>
         </div>
       </form>
+      <div class="github">
+        <a href="https://github.com/BlueFireA25/login-form" target="_blank">
+          <i class="uil uil-github-alt"></i
+        ></a>
+      </div>
     </div>
   </body>
 </html>
